--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -1,18 +1,22 @@
+<!doctype html>
 <html lang="en">
 
 <head>
+    {% load staticfiles %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Album example for Bootstrap</title>
+    <title>Paulo Pimenta</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-
+    <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css" integrity="sha256-rnmbX+ZXZml9xbNUKt/qXfgpCi6zLJX7qqR+7vX/1ZY="
+        crossorigin="anonymous" />
 
 </head>
 
@@ -20,20 +24,41 @@
 
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Paulo Pimenta</a>
+            <a class="navbar-brand" href="{% url 'home' %}">Paulo Pimenta</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link" href="#">Twitter</a>
-                    <a class="nav-item nav-link" href="#">Resume</a>
-                    <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
-                    <a class="nav-item nav-link" href="#">GitHub</a>
-                    <a class="nav-item nav-link" href="#">Slack</a>
-
-                </div>
+                    <div class="navbar-nav ml-auto">
+                            <!-- Resume and Blog-->
+                            <a class="nav-item nav-link" href="{% static 'paulo_pimenta_cv_resume.pdf' %}">Resume</a>
+                            <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
+                            <!-- Twitter-->
+                            <a class="nav-item nav-link">
+                                <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/paulofpimenta" >
+                                    <span class="fa fa-twitter"></span>
+                                </a>
+                            </a>
+                            <!-- Linkedin-->
+                            <a class="nav-item nav-link">
+                                <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/paulo-pimenta" >
+                                    <span class="fa fa-linkedin"></span>
+                                </a>
+                            </a>
+                            <!-- Github-->
+                            <a class="nav-item nav-link">
+                                <a class="btn btn-social-icon btn-github" href="https://github.com/paulofpimenta">
+                                    <span class="fa fa-github"></span>
+                                </a>
+                            </a>
+                            <!-- Slack-->
+                            <a class="nav-item nav-link">
+                                <a class="btn btn-social-icon btn-slack" href="https://paulopimenta.slack.com">
+                                    <span class="fa fa-slack"></span>
+                                </a>
+                            </a>
+                        </div>
             </div>
         </nav>
     </header>
@@ -43,30 +68,30 @@
         <section class="jumbotron text-center">
             <div class="container">
                 <h1 class="jumbotron-heading">Hi, my name is Paulo :-)</h1>
-                <p class="lead text-muted">Hello, my name is Paulo Pimenta. I am a software developpper, currently living in Montpellier, France.
-                    I love programming, teaching and reasearch.</p>
+                <p class="lead text-muted">Hello, my name is Paulo Pimenta. I am a software developpper, currently living
+                    in Montpellier, France. I love programming, teaching and reasearch.</p>
                 <p>
                     <a href="mailto:pfpimenta@gmail.com" class="btn btn-primary my-2">Email me</a>
                 </p>
+                <img src="{% static 'me.png' %}" />
             </div>
         </section>
 
         <div class="album py-5 bg-light">
             <div class="container">
                 <div class="row">
-                    
+
                     {% for job in jobs.all %}
                     <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
-                            <img class="card-img-top" src="{{ job.image.url }}"
-                                style="height: 225px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22208%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20208%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1654db2e2b7%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A11pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1654db2e2b7%22%3E%3Crect%20width%3D%22208%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2267%22%20y%3D%22116.7%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+                            <img class="card-img-top" src="{{ job.image.url }}" style="height: 225px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22208%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20208%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1654db2e2b7%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A11pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1654db2e2b7%22%3E%3Crect%20width%3D%22208%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2267%22%20y%3D%22116.7%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
                                 data-holder-rendered="true">
                             <div class="card-body">
                                 <p class="card-text">{{ job.summary }}</p>
                             </div>
                         </div>
                     </div>
-                    {% endfor %}    
+                    {% endfor %}
                 </div>
             </div>
         </div>
@@ -75,7 +100,7 @@
 
     <footer class="text-muted">
         <div class="container text-center">
-           <p>© Copyright Paulo Pimenta {% now "Y" %}</p>
+            <p>© Copyright Paulo Pimenta {% now "Y" %}</p>
         </div>
     </footer>
 
@@ -91,8 +116,7 @@
 
 
     <svg xmlns="http://www.w3.org/2000/svg" width="208" height="225" viewBox="0 0 208 225" preserveAspectRatio="none" style="display: none; visibility: hidden; position: absolute; top: -100%; left: -100%;"><defs>
-            <style
-                type="text/css"></style>
+            <style type="text/css"></style>
         </defs><text x="0" y="11" style="font-weight:bold;font-size:11pt;font-family:Arial, Helvetica, Open Sans, sans-serif">Thumbnail</text></svg></body>
 
 </html>
