Added social media buttons

--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -38,13 +38,25 @@
 
             <!-- Comments Form -->
             <div class="card my-4">
-                <h5 class="card-header">Leave a Comment:</h5>
+                <h5 class="card-header text-left" style="float:left" >Leave a Comment:
+                        <div class='text-right' style="float:right" >
+                            <a class="btn btn-social-icon btn-bitbucket" onclick=""><span class="fa fa-bitbucket"></span></a>
+                            <a class="btn btn-social-icon btn-facebook" onclick=""><span class="fa fa-facebook"></span></a>
+                            <a class="btn btn-social-icon btn-flickr" onclick=""><span class="fa fa-flickr"></span></a>
+                            <a class="btn btn-social-icon btn-github" onclick=""><span class="fa fa-github"></span></a>
+                            <a class="btn btn-social-icon btn-google" onclick=""><span class="fa fa-google"></span></a>
+                            <a class="btn btn-social-icon btn-linkedin" onclick=""><span class="fa fa-linkedin"></span></a>
+                            <a class="btn btn-social-icon btn-twitter" onclick=""><span class="fa fa-twitter"></span></a>
+                        </div>
+                    </h5>
+                
                 <div class="card-body">
                     <form>
                         <div class="form-group">
                             <textarea class="form-control" rows="3"></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
+
                     </form>
                 </div>
             </div>
