--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -10,17 +10,16 @@
 <!-- Page Content -->
 <div class="container">
 
-    <div class="row">
+    <div class="row ">
 
         <!-- Post Content Column -->
-        <div class="col-lg-8">
+        <div class="col-lg-8 card my-4">
 
             <!-- Title -->
             <h1 class="mt-4">{{blog.title}}</h1>
 
             <!-- Author -->
             <p class="lead"> by <a href="#">Start Bootstrap</a></p>
-            <hr>
 
             <!-- Date/Time -->
             <p>Posted on {{ blog.pub_date_pretty}}</p>
@@ -34,78 +33,31 @@
             <p>{{ blog.body }}</p>
             <hr>
 
-
-
-            <!-- Comments Form -->
-            <div class="card my-4">
-                <h5 class="card-header text-left" style="float:left" >Leave a Comment:
-                        <div class='text-right' style="float:right" >
-                            <a class="btn btn-social-icon btn-bitbucket" onclick=""><span class="fa fa-bitbucket"></span></a>
-                            <a class="btn btn-social-icon btn-facebook" onclick=""><span class="fa fa-facebook"></span></a>
-                            <a class="btn btn-social-icon btn-flickr" onclick=""><span class="fa fa-flickr"></span></a>
-                            <a class="btn btn-social-icon btn-github" onclick=""><span class="fa fa-github"></span></a>
-                            <a class="btn btn-social-icon btn-google" onclick=""><span class="fa fa-google"></span></a>
-                            <a class="btn btn-social-icon btn-linkedin" onclick=""><span class="fa fa-linkedin"></span></a>
-                            <a class="btn btn-social-icon btn-twitter" onclick=""><span class="fa fa-twitter"></span></a>
-                        </div>
-                    </h5>
-                
-                <div class="card-body">
-                    <form>
-                        <div class="form-group">
-                            <textarea class="form-control" rows="3"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-
-                    </form>
+            <!-- Social Bar -->
+            <div class="content">
+                <h5 class="text-right" style="float:left">Share this post : </h5>
+                <div class="text-right" style="float:right">
+                    <a class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span></a>
+                    <a class="btn btn-social-icon btn-google" href="https://plus.google.com/share?url={{ request.build_absolute_uri }}"
+                        onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" 
+                        rel="nofollow" target="_blank" title="Share on Google+">
+                        <span class="fa fa-google"></span>
+                    </a>
+                    <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/sharing/share-offsite/?mini=true&url={{ request.build_absolute_uri }}"
+                        onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"
+                        title="Share on LinkedIn">
+                        <span class="fa fa-linkedin"></span>
+                    </a>
+                    <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/intent/tweet?text={{ blog.title }}&url={{ request.build_absolute_uri }}&related=paulofpimenta&hashtags=ouicodegis"
+                        title="Share on Twitter">
+                        <span class="fa fa-twitter"></span>
+                    </a>
                 </div>
+                <br />
+                <br />
+
             </div>
-
-            <!-- Single Comment -->
-            <div class="media mb-4">
-                <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-                <div class="media-body">
-                    <h5 class="mt-0">Commenter Name</h5>
-                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-                    vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia
-                    congue felis in faucibus.
-                </div>
-            </div>
-
-            <!-- Comment with nested comments -->
-            <div class="media mb-4">
-                <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-                <div class="media-body">
-                    <h5 class="mt-0">Commenter Name</h5>
-                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-                    vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia
-                    congue felis in faucibus.
-
-                    <div class="media mt-4">
-                        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-                        <div class="media-body">
-                            <h5 class="mt-0">Commenter Name</h5>
-                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-                            vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec
-                            lacinia congue felis in faucibus.
-                        </div>
-                    </div>
-
-                    <div class="media mt-4">
-                        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-                        <div class="media-body">
-                            <h5 class="mt-0">Commenter Name</h5>
-                            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-                            vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec
-                            lacinia congue felis in faucibus.
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
         </div>
-
         <!-- Sidebar Widgets Column -->
         <div class="col-md-4">
 
@@ -168,8 +120,43 @@
 
         </div>
 
+
+
     </div>
     <!-- /.row -->
+
+
+
+
+
+
+
+
+
+    <hr>
+
+    <div id="disqus_thread"></div>
+    <script>
+
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+
+        var disqus_config = function () {
+            this.page.url = ouicodegis.com;  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = ouicodegis; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        (function () { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://ouicodegis.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+        })();
+    </script>
+
+
+    <script src="https://platform.twitter.com/widgets.js" type="text/javascript"></script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
 </div>
 <!-- /.container -->
