--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -3,8 +3,8 @@
 
 {% load staticfiles %} 
 
-{% block meta-title%}<meta property="og:title"  content="{{blog.title}}" />{% endblock %}
-{% block meta-description%}<meta property="og:description" content="{{ blog.body }}" />{% endblock %}
+{% block meta-title%}<meta property="og:title"  content={{blog.title}} />{% endblock %}
+{% block meta-description%}<meta property="og:description" content="{{ blog.summary }}" />{% endblock %}
 {% block meta-image%} <meta property="og:image" content="{{ blog.image.url }}" /> {% endblock %} 
 
 
