Other meta info added

--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,4 +1,4 @@
-{% extends 'blog/allblogs.html' %}
+{% extends 'base.html' %}
 <!-- Django does not extend static files and some other stuff-->
 
 {% load staticfiles %} 
