--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -5,7 +5,9 @@
 
 {% block meta-title%}<meta property="og:title" content="{{blog.title}}" />{% endblock %}
 {% block meta-description%}<meta property="og:description" content="{{ blog.summary }}" />{% endblock %}
-{% block meta-image%} <meta property="og:image" content="{{blog.image.url}}" /> {% endblock %} 
+{% block meta-image%} <meta property="og:image" content="{{blog.image.url}}" /> {% endblock %}
+{% block meta-url%}<meta property="og:url" content="{{ request.build_absolute_uri }}" />{% endblock %}
+
 
 <!-- Schema.org markup for Twitter+ -->
 <meta name="twitter:card" content="{{ blog.summary }}">
