--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -14,6 +14,7 @@
 <meta name="twitter:title" content="{{blog.title}}">
 <meta name="twitter:description" content="{{ blog.summary }}">
 <meta name="twitter:creator" content="@paulofpimenta">
+<meta name="twitter:image:src" content="{{blog.image.url}}"> 
 
 <!-- Schema.org markup for Google+ -->
 <meta itemprop="name" content="{{blog.title}}">
