--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -9,6 +9,13 @@
 {% block meta-url%}<meta property="og:url" content="{{ request.build_absolute_uri }}" />{% endblock %}
 
 
+<!-- Schema.org markup for Twitter -->
+<meta name="twitter:title" content="{{blog.title}} ">
+<meta name="twitter:description" content="{{ blog.summary }}">
+<meta name="twitter:image" content="{{blog.image.url}}">
+<meta name="twitter:card" content="{{blog.image.url}}">
+
+
 <!-- Schema.org markup for Google+ -->
 <meta itemprop="name" content="{{blog.title}}">
 <meta itemprop="description" content="{{ blog.summary }}">
