Other meta info added

--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -10,10 +10,10 @@
 
 
 <!-- Schema.org markup for Twitter -->
-<meta name="twitter:title" content="{{blog.title}} ">
+<meta name="twitter:title" content="{{blog.title}}">
 <meta name="twitter:description" content="{{ blog.summary }}">
 <meta name="twitter:image" content="{{blog.image.url}}">
-<meta name="twitter:card" content="{{blog.image.url}}">
+<meta name="twitter:card" content="summary_large_image">
 
 
 <!-- Schema.org markup for Google+ -->
