--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,8 @@
 </head>
 
 <body>
-    <header>
+        <!-- Navigation -->
+
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
 
@@ -63,7 +64,6 @@
                 </div>
             </div>
         </nav>
-    </header>
 
     <!-- Page Content -->
     {% block content %} {% endblock %}
