--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -31,14 +31,11 @@
 
 
 {% block content %}
-
-<!-- Page Content -->
-<div class="container">
-
+<div class = "container">
     <div class="row ">
 
         <!-- Post Content Column -->
-        <div class="col-lg-8 card my-4">
+        <div class="col-md-8">
 
             <!-- Title -->
             <h1 class="mt-4">{{blog.title}}</h1>
@@ -144,23 +141,12 @@
             </div>
 
         </div>
-
-
-
     </div>
     <!-- /.row -->
-
-
-
-
-
-
-
-
-
     <hr>
 
     <div id="disqus_thread"></div>
+</div>
     <script>
 
         /**
@@ -183,6 +169,4 @@
     <script src="https://platform.twitter.com/widgets.js" type="text/javascript"></script>
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
-</div>
-<!-- /.container -->
 {% endblock %}
