--- a/templates/base.html
+++ b/templates/base.html
@@ -2,91 +2,123 @@
 <html lang="en">
 
 <head>
-    {% load staticfiles %}
-  
-    {% block meta-title%}<meta property="og:title" content="Let's code GIS!" />{% endblock %}
-    {% block meta-description%}<meta property="og:description" content="A GIS blog!" />{% endblock %}
-    {% block meta-url%}<meta property="og:url" content="{{ request.build_absolute_uri }}" />{% endblock %}
-    {% block meta-image%}<meta property="og:image" content="{% static 'logo.png' %}" />{% endblock %}
+    {% load staticfiles %} {% block meta-title%}
+    <meta property="og:title" content="Let's code GIS!" />{% endblock %} {% block meta-description%}
+    <meta property="og:description" content="Portfolio" />{% endblock %} {% block meta-url%}
+    <meta property="og:url" content="{{ request.build_absolute_uri }}" />{% endblock %} {% block meta-image%}
+    <meta property="og:image" content="{% static 'logo.png' %}" />{% endblock %}
 
     <link rel="icon" href="../../../../favicon.ico">
+
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css" integrity="sha256-rnmbX+ZXZml9xbNUKt/qXfgpCi6zLJX7qqR+7vX/1ZY="
         crossorigin="anonymous" />
-    <title>{% block title %} Paulo Pimenta {% endblock %}</title>
+    
+    <link href="{% static 'css/stylish-portfolio.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/simple-line-icons.css' %}" rel="stylesheet">
+
+    <title>{% block title %} OuiCodeGIS {% endblock %}</title>
 </head>
 
 <body>
-        <!-- Navigation -->
+    <!-- Navigation -->
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
 
-                <a class="navbar-brand" href="{% url 'home' %}">Paulo Pimenta</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+            <a class="navbar-brand" href="{% url 'home' %}">Paulo Pimenta</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav ml-auto">
-                        <!-- Resume and Blog-->
-                        <a class="nav-item nav-link" href="{% static 'paulo_pimenta_cv_resume.pdf' %}">Resume</a>
-                        {% block nav-item %} {% endblock %}
-                        <!-- Twitter-->
-                        <a class="nav-item nav-link">
-                            <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/paulofpimenta">
-                                <span class="fa fa-twitter"></span>
-                            </a>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ml-auto">
+                    <!-- Resume and Blog-->
+                    <a class="nav-item nav-link" href="{% static 'paulo_pimenta_cv_resume.pdf' %}">Resume</a>
+                    {% block nav-item %} {% endblock %}
+                    <!-- Twitter-->
+                    <a class="nav-item nav-link">
+                        <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/paulofpimenta">
+                            <span class="fa fa-twitter"></span>
                         </a>
-                        <!-- Linkedin-->
-                        <a class="nav-item nav-link">
-                            <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/paulo-pimenta">
-                                <span class="fa fa-linkedin"></span>
-                            </a>
+                    </a>
+                    <!-- Linkedin-->
+                    <a class="nav-item nav-link">
+                        <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/paulo-pimenta">
+                            <span class="fa fa-linkedin"></span>
                         </a>
-                        <!-- Github-->
-                        <a class="nav-item nav-link">
-                            <a class="btn btn-social-icon btn-github" href="https://github.com/paulofpimenta">
-                                <span class="fa fa-github"></span>
-                            </a>
+                    </a>
+                    <!-- Github-->
+                    <a class="nav-item nav-link">
+                        <a class="btn btn-social-icon btn-github" href="https://github.com/paulofpimenta">
+                            <span class="fa fa-github"></span>
                         </a>
-                        <!-- Slack-->
-                        <a class="nav-item nav-link">
-                            <a class="btn btn-social-icon btn-slack" href="https://paulopimenta.slack.com">
-                                <span class="fa fa-slack"></span>
-                            </a>
+                    </a>
+                    <!-- Slack-->
+                    <a class="nav-item nav-link">
+                        <a class="btn btn-social-icon btn-slack" href="https://paulopimenta.slack.com">
+                            <span class="fa fa-slack"></span>
                         </a>
-                    </div>
+                    </a>
                 </div>
             </div>
-        </nav>
+        </div>
+    </nav>
 
     <!-- Page Content -->
     {% block content %} {% endblock %}
-    
+
 
     <!-- Footer-->
-    <footer class="py-5 bg-dark">
-        <div class="container text-center">
-            <p class="m-0 text-center text-white">© Copyright Paulo Pimenta {% now "Y" %}</p>
+    <footer class="footer text-center py-5 bg-dark">
+        <div class="container">
+          <ul class="list-inline mb-5">
+            <li class="list-inline-item">
+              <a class="social-link rounded-circle text-white mr-3" href="#">
+                <i class="icon-social-facebook"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="social-link rounded-circle text-white mr-3" href="#">
+                <i class="icon-social-twitter"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="social-link rounded-circle text-white" href="#">
+                <i class="icon-social-github"></i>
+              </a>
+            </li>
+          </ul>
+          <p class="text-white small mb-0">© Copyright OuiCodeGIS {% now "Y" %}</p>
         </div>
-    </footer>
+      </footer>
+   
 
     <!-- Bootstrap core JavaScript
         ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script id="dsq-count-scr" src="//ouicodegis.disqus.com/count.js" async></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    <svg xmlns="http://www.w3.org/2000/svg" width="208" height="225" viewBox="0 0 208 225" preserveAspectRatio="none" style="display: none; visibility: hidden; position: absolute; top: -100%; left: -100%;"><defs>
+    <svg xmlns="http://www.w3.org/2000/svg" width="208" height="225" viewBox="0 0 208 225" preserveAspectRatio="none" style="display: none; visibility: hidden; position: absolute; top: -100%; left: -100%;">
+        <defs>
             <style type="text/css"></style>
-        </defs><text x="0" y="11" style="font-weight:bold;font-size:11pt;font-family:Arial, Helvetica, Open Sans, sans-serif">Thumbnail</text></svg></body>
+        </defs>
+        <text x="0" y="11" style="font-weight:bold;font-size:11pt;font-family:Arial, Helvetica, Open Sans, sans-serif"></text>
+    </svg>
+    <!-- Plugin JavaScript -->
+    <script src="{% static 'js/jquery.easing.min.js' %}"></script>
+    <!-- Custom scripts for this template -->
+    <script src="{% static 'js/stylish-portfolio.min.js' %}"></script>
+
+
+</body>
+
 </html>
