Fixing image fitting on mobiles

--- a/blog/templates/blog/news.html
+++ b/blog/templates/blog/news.html
@@ -5,8 +5,8 @@
 {% block news %}
 <div class="card my-4">
     <h5 class="card-header">News</h5>
-    <div class="card-body">
-        <img src="{% static 'logo.png' %}">
+    <div class="container card-body">
+        <p class="text-center"><img src="{% static 'logo.png' %}" class="img-fluid " width="800" width="400"></p>
         <h6 class="text-left pt-3">Welcome to the OuiCode GIS Blog</h6>
         <div class="card-text">First annnouncement</div>
     </div>
