More image size fixing

--- a/blog/templates/blog/news.html
+++ b/blog/templates/blog/news.html
@@ -6,7 +6,7 @@
 <div class="card my-4">
     <h5 class="card-header">News</h5>
     <div class="container card-body">
-        <p class="text-center"><img src="{% static 'logo.png' %}" class="image-fluid"></p>
+        <p class="text-center"><img src="{% static 'logo.png' %}" class="image-fluid" width="500" height="500"></p>
         <h6 class="text-left pt-3">Welcome to the OuiCode GIS Blog</h6>
         <div class="card-text">First annnouncement</div>
     </div>
