More image size fixing

--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -94,7 +94,7 @@
                 <h5 class="card-header text-center">About me</h5>
                 <div class="card-body">
                         <div class="container-fluid text-center">
-                            <p><img src="{% static 'me-squared.png' %}" class="rounded-circle image-fluid" width="400" height="400" /></p>
+                               <img src="{% static 'me-squared.png' %}" class="rounded-circle img-fluid"/>
                             
                             <p class="card-text">Hello, my name is <strong>Paulo Pimenta. </strong> I am a software developpper, currently
                                 living in Montpellier, France. After I finished my Phd, I decided to create this blog to share some of my knowledge about GIS, programming, and reasearch.
