More image size fixing

--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -97,7 +97,7 @@
                                <img src="{% static 'me-squared.png' %}" class="rounded-circle img-fluid"/>
                             
                             <p class="card-text">Hello, my name is <strong>Paulo Pimenta. </strong> I am a software developpper, currently
-                                living in Montpellier, France. After I finished my Phd, I decided to create this blog to share some of my knowledge about GIS, programming, and reasearch.
+                                living in Montpellier, France. After I finished my Phd, I decided to create this blog to share some of my knowledge about GIS, programming, and research.
                             </p>
                      
                             <br />
