--- a/blog/templates/blog/news.html
+++ b/blog/templates/blog/news.html
@@ -8,7 +8,7 @@
     <div class="container card-body">
         <img src="{% static 'logo.png' %}" class="img-fluid">
         <h6 class="text-left pt-3">Welcome to the OuiCode GIS Blog</h6>
-        <div class="card-text">First annnouncement</div>
+        <div class="card-text">First announcement</div>
     </div>
 </div>
 {% endblock %}
